--- a/package.json
+++ b/package.json
@@ -17,12 +17,12 @@
     "body-parser": "^1.19.0",
     "concurrently": "^5.1.0",
     "express": "^4.17.1",
-    "mongoose": "^5.9.10",
-    "uglifyjs-webpack-plugin": "^2.2.0"
+    "mongodb": "^3.5.6",
+    "mongoose": "^5.9.10"
   },
-  "engines": { 
+  "engines": {
     "node": "^12.16.2",
-     "npm": "^6.14.4" 
+    "npm": "^6.14.4"
   },
   "devDependencies": {
     "nodemon": "^2.0.3"
