--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "reactstrap": "^8.4.1",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
+    "stringify": "^5.2.0",
     "uuid": "^7.0.3"
   },
   "scripts": {
