--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
   "author": "Mike Rizzo",
   "license": "MIT",
   "dependencies": {
-    "body-parser": "^1.19.0",
+    "bcryptjs": "^2.4.3",
     "concurrently": "^5.1.0",
+    "config": "^3.3.1",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.5.6",
-    "mongoose": "^5.9.10"
+    "mongoose": "^5.9.10",
+    "stringify": "^5.2.0"
   },
   "engines": {
     "node": "^12.16.2",
