--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mernshoppinglist",
+  "name": "mernsecuremessenger",
   "version": "1.0.0",
   "description": "Shopping list built with the MERN stack",
   "main": "server.js",
@@ -11,7 +11,7 @@
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
-  "author": "Mike Rizzo",
+  "author": "Mike Rizzo and Nick Maltchev",
   "license": "MIT",
   "dependencies": {
     "bcryptjs": "^2.4.3",
