--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mernsecuremessenger",
   "version": "1.0.0",
-  "description": "Shopping list built with the MERN stack",
+  "description": "Secure Messenger built with the MERN stack",
   "main": "server.js",
   "scripts": {
     "client install": "npm install --prefix client",
