--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.5.6",
     "mongoose": "^5.9.10",
+    "mongoose-encryption": "^2.0.2",
     "serve-static": "^1.14.1",
     "st": "^2.0.0",
     "stringify": "^5.2.0"
